src/objects/LoadingCondition__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终用户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>装机情况</relationshipLabel>
        <relationshipName>Accountss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BarndAndType__c</fullName>
        <label>品牌/型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>预计成交日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstalledDate__c</fullName>
        <label>预计装机日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpportunityStageName__c</fullName>
        <label>销售机会阶段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会名称</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>装机情况</relationshipLabel>
        <relationshipName>Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesWeeklyReport2__c</fullName>
        <label>销售周报</label>
        <referenceTo>SalesWeeklyReport__c</referenceTo>
        <relationshipLabel>装机情况</relationshipLabel>
        <relationshipName>SalesWeeklyReport2s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StagetDescription__c</fullName>
        <label>现阶段状态进展说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>本周</fullName>
                </value>
                <value>
                    <fullName>下周</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>装机情况</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>装机情况编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>装机情况</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>